...
    }
    
    var body: some View {
        VStack {
            Button("Close") {
                self.presentationMode.wrappedValue.dismiss()
            }.padding(.top).accessibilityLabel("DismissModal")
            Spacer()
            VStack{
                URLImageView(urlString: picURL)
                    .aspectRatio(contentMode: .fit).accessibilityLabel("ProgressOrImageSheet")
                HStack {
                    VStack(alignment: .leading) {
                        if name != "" {
                            Text(name)
                                .font(.title)
                                .fontWeight(.black)
...
